# vondic

./: .dockerignore  .env.example  .env.turn  .gitignore  LICENSE  README.md  __init__.py  api_docs.json  bot_test.py  chat_app.py  chat_escalations.db  docker-compose.example.yml  docker-compose.mail.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements_a.txt  vondic_diagrams.md
.qwen/: settings.json  settings.json.orig
AI foto/: ai_foto.py  vondic_ai_foto.ipynb
AI fraud/: ai_fraud.py  fraud_model.pkl  vectorizer.pkl  vondic_ai_fraud.ipynb
Rag-systems/: RAG.ipynb  rag.py
backend/: .env.backend.example  Dockerfile  Dockerfile.videochecker  add_cors_headers.py  clear_all_tables.py  create_tables.py  fix_cors.py  force_setup.py  game_scan_worker.py  generate_docs.py  prod_create_db.py  requirements.txt  requirements_a.txt  run.py  seed_gifts_from_images.py  setup_postgres_tables.py  video_check_worker.py
backend/app/: __init__.py  db_utils.py  error_handlers.py  exceptions.py
backend/app/api/: oauth.py
backend/app/core/: config.py  extensions.py  rate_limiter.py
backend/app/models/: __init__.py  app_setting.py  block.py  bot.py  bot_game.py  channel.py  comment.py  community.py  community_channel.py  device.py  e2e_key_backup.py  escalation.py  friendship.py  gift_catalog.py  group.py  like.py  mailbox.py  message.py  notification.py  oauth_client.py  playlist.py  playlist_borrow.py  post.py  post_report.py  social_community.py  subscription.py  support_chat_message.py  user.py  user_conversation.py  user_file.py  user_report.py  user_session.py  video.py  video_check.py  video_comment.py  video_like.py  video_view.py
backend/app/schemas/: bot_schema.py  channel_schema.py  comment_schema.py  community_channel_schema.py  community_schema.py  friendship_schema.py  group_schema.py  message_schema.py  playlist_schema.py  post_schema.py  social_community_schema.py  user_schema.py
backend/app/services/: app_download_service.py  auth_service.py  bot_game_service.py  bot_service.py  channel_service.py  comment_service.py  community_channel_service.py  community_service.py  db_schema_bootstrap.py  e2e_key_backup_service.py  email_service.py  fcm_push.py  fcm_service.py  friendship_service.py  game_safety_scanner.py  group_service.py  mail_api_service.py  mail_imap_service.py  mailbox_service.py  message_service.py  message_service.py.bak  novu_push.py  ollama_service.py  post_service.py  removal_deadline_service.py  social_community_service.py  subscription_service.py  user_service.py
backend/app/tests/: __init__.py  conftest.py  test_channel_service.py  test_channels_api.py
backend/app/utils/: api_errors.py  decorators.py  docker_exec.py  email_utils.py  mail_api_decorators.py  mail_crypto.py  mtproto_crypto.py  network_access.py  static_access.py  user_privacy.py
bcrypter/: database.py  service.py
bot/: .env.bot.example  Dockerfile  group_message_bot.py  main.py  requirements.txt  requirements_a.txt  wait-for-backend.sh
bot/bcrypter/: database.py  service.py
bot/games/: README.md
bot/games/2048/: index.html
bot_old/: Dockerfile  main.py
bot_old/bcrypter/: database.py  service.py
botiksdk/: PUBLISH.md  README.md  __init__.py  bot.py  bot_types.py  client.py  dispatcher.py  exceptions.py  filters.py  pyproject.toml  router.py  test_bot.py
desktop/: .env.desktop.example  README.md  electron-builder.yml  index.html  main.js  main.py  next.config.ts  package-lock.json  package.json  preload.js  tsconfig.json  tsconfig.tsbuildinfo  vitest.setup.ts
desktop/electron/: login.html  main.js  preload.js  updater.js
desktop/scripts/: post-build.js
desktop/src/: middleware.ts
desktop/src/app/: globals.css  layout.tsx  page.tsx
desktop/src/components/: ErrorPage.tsx  ThemeInit.tsx
desktop/src/lib/: AuthContext.tsx  SocketContext.tsx  authRedirect.ts  chatFolders.ts  e2eGlobalExchange.ts  e2eKeySync.ts  inviteLinks.ts  savedAccounts.ts  server-urls.ts  store.ts  types.ts  url-fallback.ts
desktop/src/styles/: calls.css
docs/: BOTIKSDK_EN.md  CHAT_API_CSHARP.md  CHAT_API_RU.md  CHAT_API_UNITY.md  OAUTH_EN.md  REG_RU_DNS_И_ПОЧТА.md  TECH_REQUIREMENTS.md
encproxy/: .env.encproxy.example  __init__.py  __main__.py  config.py  relay.py  requirements.txt  server.py
extension/: manifest.json  popup.html  popup.js  service_worker.js  styles.css
frontend/: .env.example  Dockerfile  docker-entrypoint.sh  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo  vitest.setup.ts
frontend/e2e/: error-pages.spec.ts
frontend/src/: middleware.ts  proxy.ts
frontend/src/app/: StoreProvider.tsx  error.tsx  globals.css  layout.tsx  (+5 more)
mobile/: App.tsx  README.md  app.json  index.js  package-lock.json  package.json  test_glob.js  tsconfig.json
mobile/docs/: NATIVE_SETUP.md
mobile/scripts/: bootstrap-native.sh  build-android.sh  capture_crash.bat  capture_crash.sh
nginx-static/: .gitignore
proxy_receiver/: config.py  crypto.py  server.py  tui.py
proxy_receiver_extension/: popup.html  popup.js  service_worker.js
requirements/: req_bot.txt  req_core.txt  req_webrtc.txt
scripts/: backup.sh  db_create_users_table.py
src/: proxy.ts
src/app/: StoreProvider.tsx  globals.css  layout.tsx  page.tsx
src/lib/: AuthContext.tsx  SocketContext.tsx  auth.utils.ts  store.ts  types.ts  utils.ts
support-api/: chat_app.py
support-api/rag_api/: RAG.ipynb  lx.xlsx  rag.py  rag_api.py
support-api/templates/: admin.html
templates/: chat.html
test/: .env.example  README.md  app.py
test/templates/: callback.html  index.html
uploaded_data/: 1770638321_9-177.xls
video_checker/: main.py
vondic_api/: README.md  __init__.py  client.py  example.py  exceptions.py  models.py  pyproject.toml  setup.py  test_vondic_api.py
webrtc/: .env.webrtc.example  Dockerfile  Dockerfile.webrtc  config.py  database.py  fcm_push.py  main.py  novu_push.py  proxy.py  requirements.txt  requirements_a.txt  signaling.py  wsgi.py
webrtc/utils/: network_access.py
webrtc/webrtc/: asgi.py  settings.py  urls.py  wsgi.py
(+597 files in other folders)
