[project]
name = "vondic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.24.0",
    "bcrypt>=5.0.0",
    "cryptography>=46.0.4",
    "django>=6.0.1",
    "email-validator==2.1.1",
    "eventlet>=0.40.4",
    "fastapi>=0.128.8",
    "flasgger>=0.9.7.1",
    "flask==3.0.3",
    "flask-cors==4.0.1",
    "flask-mail==0.9.1",
    "flask-marshmallow==1.2.1",
    "flask-migrate==4.0.7",
    "flask-socketio>=5.6.0",
    "flask-sqlalchemy==3.1.1",
    "marshmallow<4.0.0",
    "marshmallow-sqlalchemy==1.0.0",
    "pydantic>=2.12.5",
    "python-dotenv==1.0.1",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "ruff>=0.15.0",
    "stripe>=14.3.0",
    "uvicorn>=0.40.0",
    "websocket-client>=1.9.0",
    "werkzeug==3.0.3",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"webrtc/main.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
